<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@drawable/background1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NovaBiljkaActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/zaobljena_slika_background" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/listview_border"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/nazivET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5sp"
                    android:layout_marginLeft="5sp"
                    android:layout_marginTop="5sp"
                    android:layout_marginEnd="5sp"
                    android:layout_marginBottom="5sp"
                    android:ems="10"
                    android:fontFamily="sans-serif-condensed-light"
                    android:hint="Naziv"
                    android:inputType="text"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/porodicaET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5sp"
                    android:layout_marginEnd="5sp"
                    android:layout_marginBottom="5sp"
                    android:ems="10"
                    android:fontFamily="sans-serif-condensed-light"
                    android:hint="Porodica"
                    android:inputType="text"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/medicinskoUpozorenjeET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5sp"
                    android:layout_marginEnd="5sp"
                    android:layout_marginBottom="5sp"
                    android:ems="10"
                    android:fontFamily="sans-serif-condensed-light"
                    android:hint="Medicinsko upozorenje"
                    android:inputType="text"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/jeloET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5sp"
                    android:layout_marginEnd="5sp"
                    android:layout_marginBottom="5sp"
                    android:ems="10"
                    android:fontFamily="sans-serif-condensed-light"
                    android:hint="Jelo"
                    android:inputType="text"
                    android:textSize="14sp" />
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/dodajJeloBtn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/zaobljeni_button"
                android:backgroundTint="#A96E69"
                android:fontFamily="sans-serif-smallcaps"
                android:text="Dodaj jelo"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/linearLayout2"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginTop="30dp"
                android:fontFamily="cursive"
                android:text="Medicinske koristi:"
                android:textColor="#000000"
                android:textSize="24sp"
                android:textStyle="bold">

            </TextView>

            <ListView
                android:id="@+id/medicinskaKoristLV"
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="0sp"
                android:background="@drawable/listview_border" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginTop="30dp"
                android:fontFamily="cursive"
                android:text="Klimatski tipovi:"
                android:textColor="#000000"
                android:textSize="24sp"
                android:textStyle="bold">

            </TextView>

            <ListView
                android:id="@+id/klimatskiTipLV"
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="0sp"
                android:background="@drawable/listview_border" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginTop="30dp"
                android:fontFamily="cursive"
                android:text="Zemljišni tipovi:"
                android:textColor="#000000"
                android:textSize="24sp"
                android:textStyle="bold">

            </TextView>

            <ListView
                android:id="@+id/zemljisniTipLV"
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/listview_border" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginTop="30dp"
                android:fontFamily="cursive"
                android:text="Jela:"
                android:textColor="#000000"
                android:textSize="24sp"
                android:textStyle="bold">

            </TextView>

            <ListView
                android:id="@+id/jelaLV"
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="10sp"
                android:background="@drawable/listview_border" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginTop="30dp"
                android:fontFamily="cursive"
                android:text="Profil okusa:"
                android:textColor="#000000"
                android:textSize="24sp"
                android:textStyle="bold">

            </TextView>

            <ListView
                android:id="@+id/profilOkusaLV"
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/listview_border" />

            <ImageView
                android:id="@+id/slikaIV"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginStart="100dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="100dp"
                android:layout_marginBottom="0sp"
                app:layout_constraintBottom_toTopOf="@id/uslikajBiljkuBtn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/linearLayout2"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
                app:srcCompat="@drawable/plant1" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/uslikajBiljkuBtn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/zaobljeni_button"
                android:backgroundTint="#A96E69"
                android:fontFamily="sans-serif-smallcaps"
                android:text="Uslikaj biljku"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@id/dodajBiljkuBtn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.428"
                app:layout_constraintStart_toEndOf="@+id/linearLayout2"
                app:layout_constraintTop_toBottomOf="@id/slikaIV" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/dodajBiljkuBtn"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/zaobljeni_button"
                android:backgroundTint="#68A24F"
                android:fontFamily="sans-serif-smallcaps"
                android:text="Dodaj biljku"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/linearLayout2"
                app:layout_constraintTop_toBottomOf="@+id/uslikajBiljkuBtn" />


        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>